# mjdrone

./: .gitignore  README.md  pyproject.toml
src/mjdrone/: __init__.py  cli.py  viewers.py
src/mjdrone/assets/: __init__.py  landmarks.py  quadcopter.py
src/mjdrone/models/: __init__.py  attention_fusion.py  shared_encoder_ppo.py
src/mjdrone/tasks/: __init__.py
src/mjdrone/tasks/hover/: __init__.py  env_cfg.py  mdp.py  rl_cfg.py
src/mjdrone/tasks/waypoint/: __init__.py  env_cfg.py  mdp.py  rl_cfg.py
